systems/ojbquay/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ojbquay
  labels:
    app.kubernetes.io/part-of: ojbquay
