systems/ojbquay/deploy/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runtime-ingress
spec:
  podSelector: {}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {}
    - ports:
        - {protocol: TCP, port: 8080}
        - {protocol: TCP, port: 9100}
        - {protocol: TCP, port: 9101}
